# gmsg

./: .gmsg.toml  .gmsgconfig.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  err.txt
.github/workflows/: release.yaml
src/: README  ai.rs  config.rs  editor.rs  errors.rs  git.rs  gmsg.rs  lib.rs  main.rs  test_utils.rs  types.rs
src/ai/: gemini.rs  groq.rs  mistral.rs  mod.rs  types.rs
src/tui/: editor.rs  mod.rs  selector.rs  terminal_guard.rs
