[package]
name = "gmsg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
git2 = "0.20.4"
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
reqwest = "0.13.3"
rig = "0.36.0"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
