[package]
name = "gmsg"
version = "0.1.1"
edition = "2024"
license = "MIT"
# license-file = "LICENSE"
keywords = ["ai", "cli", "git", "commits", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
homepage = "https://olorikendrick.github.io/gmsg/"
description = "AI-powered commit message generator with a TUI editor"
repository = "https://github.com/olorikendrick/gmsg"


[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
git2 = "0.20.4"
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"] }
rig = "0.36.0"
serde = "1.0.228"
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
openssl = { version = "0.10", features = ["vendored"] }
http = "1.4.0"
