[package]
name = "gmsg"
version = "0.1.3"
edition = "2024"
license = "MIT"
# license-file = "LICENSE"
keywords = ["ai", "cli", "git", "commits", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
homepage = "https://olorikendrick.github.io/gmsg/"
description = "AI-powered commit message generator with a TUI editor"
repository = "https://github.com/olorikendrick/gmsg"


[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.23"
directories = "6.0.0"
git2 = "0.20.4"
indicatif = "0.18.4"
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
reqwest = { version = "0.13.4", features = ["json", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
arboard = "3.6.1"

[dev-dependencies]
assert_cmd="1"
tempfile = "3.27.0"
rstest = "0.26.1"


